# solana_pass

./: .gitignore  Anchor.toml  Cargo.toml  SOLANA_ARCHITECTURE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/frontend/: package.json
apps/frontend-next/: README.md  package.json
apps/frontend-next/src/app/: page.tsx
apps/frontend/src/app/: globals.css  page.tsx
apps/frontend/src/components/: DomainRegisterForm.tsx  SponsoredMemoForm.tsx  index.ts
docs/: DOMAIN_STRATEGY.md  IDENTITY_AND_SAS.md  PROGRAMS_DESIGN.md  SOLANA_MIGRATION_PLAN.md
gateway/: Anchor.toml
gateway/programs/gateway/: Cargo.toml
gateway/programs/gateway/src/: lib.rs
gateway/tests/: gateway.ts
programs/nfc_registry/: Cargo.toml
programs/nfc_registry/src/: lib.rs
programs/social_draw/: Cargo.toml
programs/social_draw/src/: lib.rs
services/relayer/: .env.example  README.md  package.json
services/relayer/src/: index.js
services/solana-api/: .env.example  README.md  package.json  tsconfig.json
services/solana-api/src/: main.ts
services/solana-api/src/modules/: app.module.ts
services/solana-api/src/modules/health/: health.controller.ts  health.module.ts
services/solana-api/src/modules/names/: names.controller.ts  names.module.ts
services/solana-api/src/modules/shared/: stores.ts  (+4 more)
services/solana-api/src/types/: shims.d.ts
solpass/: README.md
solpass/front-end/: README.md  package.json
solpass/front-end/src/app/: page.tsx
solpass/front-end/src/components/: FlippablePassCard.tsx
solpass/front-end/src/lib/: account.ts  config.ts  useSponsorHistory.ts
(+6 files in other folders)
