[package]
name = "social_draw"
version = "0.1.0"
authors = ["solana-pass"]
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "social_draw"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true, features = ["idl-build"] }
